Codigo de confirmacao apos cadastro

--- a/templates/email/confirmation.html.twig
+++ b/templates/email/confirmation.html.twig
@@ -1,5 +1,2 @@
-<h3>
-    Confirme seu e-mail clicando no link abaixo.
-</h3>
-
-<a href=""></a>
+{#<h2>Bem vindo!</h2>#}
+<h3>Seu Código de Ativação é: {{ user.confirmationToken }}</h3>
